--- a/index.html
+++ b/index.html
@@ -2,55 +2,81 @@
 <!DOCTYPE html>
 <!-- Оболочка документа, указываем язык содержимого -->
 <html lang="ru">
-	<!-- Заголовок страницы, контейнер для других важных данных (не отображается) -->
-	<head>
-		<!-- Заголовок страницы в браузере -->
-		<title>Методология БЭМ</title>
-		<!-- Подключаем CSS -->
-		<link rel="stylesheet" href="css/style.css" />
-		<!-- Кодировка страницы -->
-		<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
-	</head>
-	<!-- Отображаемое тело страницы -->
-	<body>
-		<div class="about">
-			<div class="about__body">
-				<div class="about__header">
-					<div class="about__title title">ABOUT</div>
-					<div class="about__text">We specialize in contemporary, functional, and stunning websites with design that really brings that "WOW" factor. 
-In our design process, we make sure to stay one step ahead of the latest trends, 
-never forgetting to abide by key web standards.</div>
-				</div>
-				<div class="about__row">
-					<div class="about__column">
-						<div class="item-about">
-							<div class="item-about__icon">
-								<img src="img/about/01.png" alt="" />
-							</div>
-							<div class="item-about__title">WEB</div>
-							<div class="item-about__text">We tend to deliver unique and functional design, through innovation and creativity.</div>
-						</div>
-					</div>
-					<div class="about__column">
-						<div class="item-about">
-							<div class="item-about__icon">
-								<img src="img/about/02.png" alt="" />
-							</div>
-							<div class="item-about__title">iOS AND ANDROID</div>
-							<div class="item-about__text">We seek to bring new businesses and customers closer together through valuable insights and proper targeting.</div>
-						</div>
-					</div>
-					<div class="about__column">
-						<div class="item-about">
-							<div class="item-about__icon">
-								<img src="img/about/03.png" alt="" />
-							</div>
-							<div class="item-about__title">MARKETING</div>
-							<div class="item-about__text">We’ll help you establish the right goals and build the right paths. Success depends on setting the right intention.</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</body>
+  <!-- Заголовок страницы, контейнер для других важных данных (не отображается) -->
+  <head>
+    <!-- Заголовок страницы в браузере -->
+    <title>Методология БЭМ</title>
+    <!-- Подключаем CSS -->
+    <link rel="stylesheet" href="css/style.css" />
+    <!-- Кодировка страницы -->
+    <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
+  </head>
+  <!-- Отображаемое тело страницы -->
+  <body>
+    <section class="about">
+      <div class="about__body">
+        <div class="about__header">
+          <div class="about__title title">ABOUT</div>
+          <div class="about__text">
+            We specialize in contemporary, functional, and stunning websites
+            with design that really brings that "WOW" factor. In our design
+            process, we make sure to stay one step ahead of the latest trends,
+            never forgetting to abide by key web standards.
+          </div>
+        </div>
+        <div class="about__row">
+          <div class="about__column">
+            <div class="item-about">
+              <div class="item-about__icon">
+                <img src="img/about/01.png" alt="" />
+              </div>
+              <div class="item-about__title">WEB</div>
+              <div class="item-about__text">
+                We tend to deliver unique and functional design, through
+                innovation and creativity.
+              </div>
+            </div>
+          </div>
+          <div class="about__column">
+            <div class="item-about">
+              <div class="item-about__icon">
+                <img src="img/about/02.png" alt="" />
+              </div>
+              <div class="item-about__title">iOS AND ANDROID</div>
+              <div class="item-about__text">
+                We seek to bring new businesses and customers closer together
+                through valuable insights and proper targeting.
+              </div>
+            </div>
+          </div>
+          <div class="about__column">
+            <div class="item-about">
+              <div class="item-about__icon">
+                <img src="img/about/03.png" alt="" />
+              </div>
+              <div class="item-about__title">MARKETING</div>
+              <div class="item-about__text">
+                We’ll help you establish the right goals and build the right
+                paths. Success depends on setting the right intention.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <section class="footer">
+        <div class="footer__logo">
+          <img src="img/footer/footer_logo.png" alt="" />
+        </div>
+        <ul class="footer__links">
+          <li class="links__item">Home</li>
+          <li class="links__item">Facebook</li>
+          <li class="links__item">Linkedin</li>
+          <li class="links__item">Contact</li>
+        </ul>
+        <div class="footer__copyright">© 2015. All Rights Reserved</div>
+      </section>
+    </footer>
+  </body>
 </html>
