--- a/index.html
+++ b/index.html
@@ -13,70 +13,73 @@
   </head>
   <!-- Отображаемое тело страницы -->
   <body>
+    <header class="header">
+      <div class="header__logo">
+        <img src="img/header/header_logo.png" alt="" />
+      </div>
+    </header>
     <section class="about">
       <div class="about__body">
         <div class="about__header">
-          <div class="about__title title">ABOUT</div>
-          <div class="about__text">
+          <h2 class="about__title title">ABOUT</h2>
+          <p class="about__text">
             We specialize in contemporary, functional, and stunning websites
             with design that really brings that "WOW" factor. In our design
             process, we make sure to stay one step ahead of the latest trends,
             never forgetting to abide by key web standards.
-          </div>
+          </p>
         </div>
         <div class="about__row">
           <div class="about__column">
             <div class="item-about">
-              <div class="item-about__icon">
+              <figure class="item-about__icon">
                 <img src="img/about/01.png" alt="" />
-              </div>
-              <div class="item-about__title">WEB</div>
-              <div class="item-about__text">
+              </figure>
+              <h3 class="item-about__title">WEB</h3>
+              <p class="item-about__text">
                 We tend to deliver unique and functional design, through
                 innovation and creativity.
-              </div>
+              </p>
             </div>
           </div>
           <div class="about__column">
             <div class="item-about">
-              <div class="item-about__icon">
+              <figure class="item-about__icon">
                 <img src="img/about/02.png" alt="" />
-              </div>
-              <div class="item-about__title">iOS AND ANDROID</div>
-              <div class="item-about__text">
+              </figure>
+              <h3 class="item-about__title">iOS AND ANDROID</h3>
+              <p class="item-about__text">
                 We seek to bring new businesses and customers closer together
                 through valuable insights and proper targeting.
-              </div>
+              </p>
             </div>
           </div>
           <div class="about__column">
             <div class="item-about">
-              <div class="item-about__icon">
+              <figure class="item-about__icon">
                 <img src="img/about/03.png" alt="" />
-              </div>
-              <div class="item-about__title">MARKETING</div>
-              <div class="item-about__text">
+              </figure>
+              <h3 class="item-about__title">MARKETING</h3>
+              <p class="item-about__text">
                 We’ll help you establish the right goals and build the right
                 paths. Success depends on setting the right intention.
-              </div>
+              </p>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <footer>
-      <section class="footer">
-        <div class="footer__logo">
-          <img src="img/footer/footer_logo.png" alt="" />
-        </div>
-        <ul class="footer__links">
-          <li class="links__item">Home</li>
-          <li class="links__item">Facebook</li>
-          <li class="links__item">Linkedin</li>
-          <li class="links__item">Contact</li>
-        </ul>
-        <div class="footer__copyright">© 2015. All Rights Reserved</div>
-      </section>
+    <footer class="footer">
+      <div class="footer__logo">
+        <img src="img/footer/footer_logo.png" alt="" />
+      </div>
+      <ul class="footer__links">
+        <li class="links__item">Home</li>
+        <li class="links__item">Facebook</li>
+        <li class="links__item">Linkedin</li>
+        <li class="links__item">Contact</li>
+      </ul>
+      <p class="footer__copyright">© 2015. All Rights Reserved</p>
     </footer>
   </body>
 </html>
