--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
   <!-- Отображаемое тело страницы -->
   <body>
     <header class="header">
-      <div class="header__logo">
-        <img src="img/header/header_logo.png" alt="" />
+      <div class="header__body">
+        <div class="header__logo">
+          <img src="img/header/header_logo.png" alt="" />
+        </div>
+        <h1 class="header__title">Clear, smart, attractive design</h1>
+        <p class="header__subtiile">for your app, logo, website</p>
+        <a href="" class="header__btn btn">READ MORE</a>
       </div>
     </header>
     <section class="about">
@@ -69,6 +74,7 @@
         </div>
       </div>
     </section>
+    <a href="" class="btn">READ MORE</a>
     <footer class="footer">
       <div class="footer__logo">
         <img src="img/footer/footer_logo.png" alt="" />
